--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     },
     "homepage": "https://github.com/rachsg7/cse341-project2#readme",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "connect-flash": "^0.1.1",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
+        "express-session": "^1.17.2",
+        "express-validator": "^6.11.1",
         "mongoose": "^5.12.13",
         "nodemon": "^2.0.7"
     }
