--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "express-validator": "^6.11.1",
         "mongodb": "^3.6.9",
         "mongoose": "^5.12.14",
+        "multer": "^1.4.2",
         "nodemon": "^2.0.7"
     }
 }
