--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "custom-env": "^2.0.1",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.6",
+        "ejs-lint": "^1.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
         "express-validator": "^6.11.1",
