--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
         "ejs-lint": "^1.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
-        "express-validator": "^6.11.1",
+        "express-validator": "^6.12.0",
+        "fetch": "^1.1.0",
         "mongodb": "^3.6.9",
         "mongoose": "^5.12.14",
         "multer": "^1.4.2",
-        "nodemon": "^2.0.7"
+        "node-fetch": "^2.6.1",
+        "nodemon": "^2.0.7",
+        "request": "^2.88.2",
+        "uuid": "^8.3.2"
     }
 }
