--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "node-fetch": "^2.6.1",
         "nodemon": "^2.0.7",
         "request": "^2.88.2",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "uuid-random": "^1.3.2"
     }
 }
